--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ body {
     border: 1px solid white;
     background-color: white;
     border-radius: 0px 0px 10px 10px;
+    top: -4px;
 }
 
 .mobile-content {
@@ -74,4 +75,35 @@ body {
     height: 360px;
 
 
+}
+
+.user-photo {
+    border-radius: 50%;
+    /* font-size: 10px; */
+    width: 20px;
+    border: solid 1px white;
+    padding: 0px;
+    position: relative;
+    top: 25px;
+    left: 20px;
+}
+
+.user-name {
+    font-size: 12px;
+    position: relative;
+    color: white;
+    left: 50px;
+    bottom: 3px;
+}
+
+.about {
+    position: relative;
+    font-size: 9px;
+    color: var(--Dark-Grayish-Violet);
+    left: 50px;
+    bottom: 5px;
+}
+
+.user-profile {
+    padding-left: 10px;
 }
