--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,22 @@ body {
 .user-profile {
     padding-left: 10px;
 }
+
+.content {
+    position: relative;
+    left: 600px;
+    bottom: 740px;
+    max-width: 385px;
+}
+
+.content-title {
+    font-size: 27px;
+    font-family: regular-rubik;
+    margin-bottom: 20px;
+    color: var(--Very-Dark-Desaturated-Violet);
+}
+
+.content-text {
+    color: var(--Dark-Grayish-Violet);
+    font-size: 16px;
+}
