--- a/css/style.css
+++ b/css/style.css
@@ -40,28 +40,35 @@ body {
 
 }
 
+main {
+	display: flex;
+}
+
+main .grid-area {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .background-gradient {
-	max-width: 350px;
+	width: 30%;
 	height: 85vh;
 	background-image: linear-gradient(var(--LightMagenta), var(--LightViolet));
 	border-radius: 0px 0px 170px 170px;
 	margin-left: -30px;
 }
 
-/* .flex-area {
-    display: flex;
-    border: 1px black solid;
-} */
 
 .mobile {
 	height: 411px;
 	border: 10px solid white;
 	width: 240px;
 	position: relative;
-	bottom: 410px;
-	left: 250px;
 	border-radius: 20px;
+	margin-left: -6%;
+	margin-top: 200px;
 }
+
 
 .topscreen-gradient {
 	background-image: linear-gradient(to left, var(--LightMagenta), var(--LightViolet));
@@ -72,7 +79,7 @@ body {
 .topscreen-gradient::after {
 	content: "";
 	position: absolute;
-	right: 60px;
+	left: 55px;
 	width: 120px;
 	height: 15px;
 	border: 1px solid white;
@@ -88,7 +95,6 @@ body {
 
 .user-photo {
 	border-radius: 50%;
-	/* font-size: 10px; */
 	width: 20px;
 	border: solid 1px white;
 	padding: 0px;
@@ -117,16 +123,11 @@ body {
 	padding-left: 10px;
 }
 
-
 .grid-area {
-	display: flex;
-	justify-content: end;
-	margin-right: 20%;
+	flex-grow: 1;
 }
 
 .content {
-	position: absolute;
-	top: 356px;
 	width: 310px;
 }
 
